--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,12 +1,11 @@
 name: idris2
 base: core18
-version: 'pre-alpha'
 summary: A dependently typed programming language, a successor to Idris
 description: |
   A pre-alpha version of Idris 2. Idris 2 is a dependently typed programming language based
   on "Quantitative Type Theory" which allows explicit annotation of erased types, and linear types.
-grade: devel
 confinement: classic
+adopt-info: idris2
 
 apps:
   idris2:
@@ -20,6 +19,13 @@ parts:
       launcher.sh: bin/launcher
     stage:
       - bin/launcher
+  chez:
+    plugin: dump
+    source: src/
+    organize:
+      chez.sh: bin/chez
+    stage:
+      - bin/chez
   idris2:
     plugin: make
     source: https://github.com/edwinb/idris2.git
@@ -27,6 +33,11 @@ parts:
       - chezscheme
     stage-packages:
       - chezscheme
+    override-pull: |
+      snapcraftctl pull
+      version="$(git describe --always | sed -e 's/-/+git/;y/-/./')"
+      snapcraftctl set-version "$version"
+      snapcraftctl set-grade "devel"
     override-build: |
       export PATH=/root/.cabal/bin:$PATH
       make install PREFIX=$SNAPCRAFT_PART_INSTALL
