--- a/src/launcher.sh.in
+++ b/src/launcher.sh.in
@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
+IDRIS2_VERSION=
+
 set -e
 
 # On Fedora $SNAP is under /var and there is some magic to map it to /snap.
@@ -10,7 +12,7 @@ SNAP=`echo $SNAP | sed -e "s|/var/lib/snapd||g"`
 export CHEZ="$SNAP/bin/chez"
 
 # Discover Idris libraries in the home installation
-DOT_IDRIS="$HOME/.idris2/idris2-0.0.0/"
+DOT_IDRIS="$HOME/.idris2/$IDRIS2_VERSION"
 if [ -d "$DOT_IDRIS" ]; then
     for new_path in $(find "$DOT_IDRIS" -mindepth 1 -maxdepth 1 -type d);
     do
@@ -19,15 +21,15 @@ if [ -d "$DOT_IDRIS" ]; then
 fi
 
 # Idris support in the home installation
-export IDRIS2_DATA="$HOME/.idris2/idris2-0.0.0/support:$IDRIS2_DATA"
+export IDRIS2_DATA="$HOME/.idris2/$IDRIS2_VERSION/support:$IDRIS2_DATA"
 
 # Discover Idris libraries bundled with the snap
-for new_path in $(find "$SNAP/idris2-0.0.0/" -mindepth 1 -maxdepth 1 -type d);
+for new_path in $(find "$SNAP/$IDRIS2_VERSION/" -mindepth 1 -maxdepth 1 -type d);
 do
     export IDRIS2_PATH="$new_path:$IDRIS2_PATH"
 done
 
 # Idris support bundled with the snap
-export IDRIS2_DATA="$SNAP/idris2-0.0.0/support:$IDRIS2_DATA"
+export IDRIS2_DATA="$SNAP/$IDRIS2_VERSION/support:$IDRIS2_DATA"
 
 exec $@
