--- a/src/launcher.sh.in
+++ b/src/launcher.sh.in
@@ -4,9 +4,16 @@ IDRIS2_VERSION=
 
 set -e
 
-# On Fedora $SNAP is under /var and there is some magic to map it to /snap.
-# We need to handle that case and reset $SNAP
-SNAP=`echo $SNAP | sed -e "s|/var/lib/snapd||g"`
+# Explicitly override SNAP. By default, Idris 2 generates Chez scheme code which gets
+# compiled to Chez scheme byte code. Both the generated Chez scheme scripts as well as
+# the generated Chez scheme byte code files start with a shebang pointing to the Chez scheme
+# interpreter.
+# For convenience, this snap package bundles a Chez scheme interpreter.
+# Snap applications reside in /snap/idris2/<version number>, where <version number> is an
+# integer. /snap/idris2/current is a symlink to the current version. By explicitly overriding
+# SNAP we ensure that the shebang points to the "current" symlink rather than to the current
+# explicit version number.
+export SNAP="/snap/idris2/current"
 
 # Update CHEZ to point to bundled scheme wrapper
 export CHEZ="$SNAP/bin/chez"
