Only support x86_64 (amd64) for now

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,6 +7,9 @@ description: |
 confinement: classic
 adopt-info: idris2
 
+architectures:
+  - build-on: amd64
+
 apps:
   idris2:
     command: bin/launcher $SNAP/bin/idris2
