--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -68,3 +68,10 @@ parts:
     override-build: |
       cabal --http-transport=wget update
       cabal --http-transport=wget install idris-1.3.2
+  mimalloc:
+    plugin: cmake
+    source: https://github.com/microsoft/mimalloc.git
+    source-tag: v1.6.1
+    prime:
+      - -lib/mimalloc-1.6/cmake
+      - -lib/mimalloc-1.6/include
