--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,8 +2,8 @@ name: idris2
 base: core18
 summary: A dependently typed programming language, a successor to Idris
 description: |
-  A pre-alpha version of Idris 2. Idris 2 is a dependently typed programming language based
-  on "Quantitative Type Theory" which allows explicit annotation of erased types, and linear types.
+  Idris 2 is a dependently typed programming language based on "Quantitative Type Theory"
+  which allows explicit annotation of erased types, and linear types.
 confinement: classic
 adopt-info: idris2
 
