--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -35,13 +35,10 @@ parts:
       chez.sh: bin/chez
     stage:
       - bin/chez
-  rlfe:
-    plugin: nil
-    stage-packages:
-      - rlfe
   idris2:
     plugin: make
     source: https://github.com/idris-lang/idris2.git
+    source-tag: v0.2.0
     build-packages:
       - clang
       - chezscheme9.5
