--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -38,6 +38,7 @@ parts:
   idris2:
     plugin: make
     source: https://github.com/idris-lang/idris2.git
+    source-tag: v0.2.1
     build-packages:
       - clang
       - chezscheme9.5
