--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -39,6 +39,7 @@ parts:
       - bin/chez
   idris2:
     plugin: make
+    source-tag: v0.4.0
     source: https://github.com/idris-lang/idris2.git
     build-packages:
       - clang
